--- a/assets/text-scramble/styles.css
+++ b/assets/text-scramble/styles.css
@@ -11,27 +11,34 @@
   top: 0;
   left: 0;
 
-  padding-top: 0.2em;
-  min-width: calc(100% + 0.5em);
-
+  width: 100%;
   padding-bottom: 0.5em;
+
+  /* min-width: calc(100% + 0.5em); */
+  /*padding-top: 0.2em;*/
+
   mask-image: var(--mask);
   -webkit-mask-image: var(--mask);
 
+  /*word-break: normal;  When scrambling: break-all */
+
+  /* ! DEBUGGING   
+  background-color: rgba(255, 255, 0, 0.305); */
+}
+
+.scramble-text,
+#info::before {
   /* Creates perfect squares:
    █ (Full Block) 
    ░ ▒ ▓ (Shade Blocks)
   */
   font-family: "Courier New", monospace;
 
+  text-wrap: balance;
+
   /* manually adjusted for better visual effect */
   --char-space: 0.25em;
   --char-width: 1ch;
   line-height: calc(var(--char-width) + var(--char-space) * 2);
   /*letter-spacing: var(--char-space);*/
-
-  word-break: normal; /* When scrambling: break-all */
-
-  /* ! DEBUGGING
-  background-color: purple; */
 }
